5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1834_2602.log
== TEST (2019-06-27 17:18:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
esfi = array([2,1,2])
salm = array(([1,2,3])
coli = array([4,0,2])
alimentos = array([esfi,salm,coli])
c = dot (inv(alimentos) , z.T)
print("estafilococo: ",round(c[0],1)
print("salmonela: ", round(c[1],1)
print("coli: ", round(c[2],1)
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
File "XXXX", line 6
    coli = array([4,0,2])
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
esfi = array([2,1,2])
salm = array([1,2,3])
coli = array([4,0,2])
alimentos = array([esfi,salm,coli])
c = dot (inv(alimentos) , z.T)
print("estafilococo: ",round(c[0],1)
print("salmonela: ", round(c[1],1)
print("coli: ", round(c[2],1)
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
File "XXXX", line 10
    print("salmonela: ", round(c[1],1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:19:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
esfi = array([2,1,2])
salm = array([1,2,3])
coli = array([4,0,2])
alimentos = array([esfi,salm,coli])
c = dot (inv(alimentos) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:20:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
esfi = array([2,1,2])
salm = array([1,2,3])
coli = array([4,0,2])
alimentos = array([esfi,salm,coli])
c = dot (inv(alimentos) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- EXECUTION TIME:
1.22234
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  -2023.0
salmonela:  -8652.9
coli:  8327.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -3312.3
salmonela:  -15824.3
coli:  12272.2
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  12653.5
salmonela:  31251.1
coli:  -23981.0
coli
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:21:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
esfi = array([2,1,4])
salm = array([1,2,0])
coli = array([2,3,2])
alimentos = array([esfi,salm,coli])
c = dot (inv(alimentos) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:21:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
esfi = array([2,1,4])
salm = array([1,2,0])
coli = array([2,3,2])
alimentos = array([esfi,salm,coli])
c = dot (inv(alimentos) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- EXECUTION TIME:
1.05043
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 21:48:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
a = array([2,1,4])
b = array([1,2,0])
c = array([2,3,2])
bacterias = array([a,b,c])
c = dot (inv(alimentos) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 21:51:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
a = array([2,1,4])
b = array([1,2,0])
c = array([2,3,2])
bacterias = array([a,b,c])
c = dot (inv(bacterias) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 21:51:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
a = array([2,1,4])
b = array([1,2,0])
c = array([2,3,2])
bacterias = array([a,b,c])
c = dot (inv(bacterias) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 21:52:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
a = array([2,1,4])
b = array([1,2,0])
c = array([2,3,2])
bacterias = array([a,b,c])
c = dot (inv(bacterias) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- EXECUTION TIME:
1.26951
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 21:59:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
a = array([2,1,4])
b = array([1,2,0])
c = array([2,3,2])
bacterias = array([a,b,c])
c = dot (inv(bacterias) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 22:04:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
z = array(eval(input("Digite: ")))
bacterias = array([[2,1,4],[1,2,0],[2,3,2]])
c = dot (inv(bacterias) , z.T)
print("estafilococo: ",round(c[0],1))
print("salmonela: ", round(c[1],1))
print("coli: ", round(c[2],1))
if (c[0] == min(c)):
	print("estafilococo")
elif (c[1] == min(c)):
	print("salmonela")
else:
	print("coli")

-- EXECUTION TIME:
1.05774
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
